First working version, UI changes needed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">FirebaseDemo</string>
     <string name="sign_in">Sign in</string>
+    <string name="Graph_name">Number of students per lecture</string>
     <string-array name="Lectures">
         <item>Lecture1</item>
         <item>Lecture2</item>
